--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = test_task_WebDriver.dev
+DJANGO_SETTINGS_MODULE = test_task_WebDriver.settings
 python_files = tests.py test_*.py *_tests.py
