--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==18.1.0
 Django==2.0.6
 django-filter==1.1.0
 djangorestframework==3.8.2
+gunicorn==19.8.1
 more-itertools==4.2.0
 pluggy==0.6.0
 psycopg2-binary==2.7.5
@@ -12,3 +13,4 @@ pytest-django==3.3.2
 pytz==2018.4
 selenium==3.12.0
 six==1.11.0
+whitenoise==3.3.1
